CSDEV/objects/Auto_Forwarding_Email_Setting__mdt.object
<CustomObject>
    <description>HAE: To map case region and case group with mailboxes.</description>
    <fields>
        <fullName>HAE_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: This field denotes if the current record is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Group_Name__c</fullName>
        <description>HAE: This field denotes the case group.</description>
        <label>Case Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Region__c</fullName>
        <description>HAE: This field denotes the case region.</description>
        <label>Case Region</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Outgoing_Mailbox__c</fullName>
        <description>HAE: This field denotes the outgoing mailbox.</description>
        <label>Outgoing Mailbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Auto-Forwarding Email Setting</label>
    <pluralLabel>Auto-Forwarding Email Settings</pluralLabel>
</CustomObject>